--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@uiw/react-md-editor": "4.0.1",
     "daisyui": "^4.4.19",
     "next": "14.0.4",
+    "openai": "^4.22.1",
     "react": "^18",
     "react-dom": "^18"
   },
