--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@prisma/client": "^5.7.0",
     "@uiw/react-md-editor": "4.0.1",
+    "classcat": "^5.0.4",
     "daisyui": "^4.4.19",
+    "date-fns": "^2.30.0",
     "next": "14.0.4",
     "openai": "^4.22.1",
     "react": "^18",
