--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-DEEPL_AUTH_KEY=
 OPENAI_API_KEY=
-DATABASE_URL=
 APP_URL=
+DEEPL_AUTH_KEY=
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
