feat: style scrollbar and add link

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "openai": "^4.22.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
