--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "date-fns": "^2.30.0",
     "firebase": "^10.7.1",
     "github-markdown-css": "^5.5.0",
+    "lodash": "^4.17.21",
+    "markdown-to-txt": "^2.0.1",
     "next": "14.0.1",
     "openai": "^4.22.1",
     "react": "^18",
