--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^1.0.13",
     "@types/showdown": "^2.0.6",
     "@uiw/react-md-editor": "4.0.1",
     "cheerio": "1.0.0-rc.12",
@@ -16,10 +17,13 @@
     "daisyui": "^3.9.4",
     "date-fns": "^2.30.0",
     "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
+    "framer-motion": "^10.18.0",
     "github-markdown-css": "^5.5.0",
     "lodash": "^4.17.21",
     "markdown-to-txt": "^2.0.1",
     "next": "14.0.1",
+    "next-auth": "5.0.0-beta.5",
     "openai": "^4.22.1",
     "react": "^18",
     "react-dom": "^18",
