ci/cd: refactor deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,16 +12,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-  
-      - name: Install dependencies
-        run: npm install
-  
-      - name: Build Next.js app
-        run: npm run build
-  
+    steps:  
       - name: SSH Deploy
         uses: appleboy/ssh-action@master
         with:
@@ -32,5 +23,4 @@ jobs:
             cd /wordy
             git pull
             sudo pnpm install
-            sudo pnpm run build
-            pm2 restart ../ecosystem.config.js
+            sudo pnpm run build && pm2 restart ../ecosystem.config.js
