--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,4 @@ jobs:
             cd ~/wordy
             git pull
             sudo pnpm install
-            sudo pnpm run build && pm2 restart ../ecosystem.config.js
+            sudo pnpm run build && pm2 kill && pm2 start ../ecosystem.config.js
