--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^12.0.0",
     "framer-motion": "^10.18.0",
     "github-markdown-css": "^5.5.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "markdown-to-txt": "^2.0.1",
     "next": "14.0.1",
